--- a/resources/queSettings.desktop
+++ b/resources/queSettings.desktop
@@ -3,6 +3,6 @@ Type=Application
 Name=queSettings
 Comment=Settings Manager
 Icon=applications-system
-TryExec=quesettings
-Exec=quesettings
+TryExec=queSettings
+Exec=queSettings
 Categories=System;Monitor;Qt;
